--- a/TMS/TMS/Areas/HelpDesk/Views/Report/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Report/Index.cshtml
@@ -94,7 +94,7 @@
 
                             <th>Actual End Date</th>
                             <th>Type</th>
-                            <th>Status</th>
+                            <th>Status</th> <!--Comlumn 6-->
                             <th>Mode</th>
 
                             <th>Catagory</th>
@@ -178,7 +178,6 @@
                     {
                         data: chartData, // data format: [12, 19, 3, 5, 2, 3]
                         backgroundColor: colors
-                        //hoverBackgroundColor: ["#FF6384", "#36A2EB", "#FFCE56"]
                     }
                 ]
             }
@@ -222,7 +221,11 @@
                     },
                     {
                         "render": function (data, type, row) {
-                            return row[1];
+                            if (row[4] > row[3]) {
+                                return row[1] + "&nbsp;&nbsp;<label class='label label-danger'>Overdue</label>";
+                            } else {
+                                return row[1];
+                            }
                         },
                         // Subject
                         "targets": 1
@@ -244,6 +247,7 @@
                     {
                         "render": function (data, type, row) {
                             return row[4];
+                            
                         },
                         // Actual End Date
                         "targets": 4,
@@ -257,7 +261,19 @@
                     },
                     {
                         "render": function (data, type, row) {
-                            return row[6];
+                            if (row[6] == "New") {
+                                return "<label class='label label-info'>New</label>";
+                            }else if (row[6] == "Assigned") {
+                                return "<label class='label label-warning'>Assigned</label>";
+                            } else if (row[6] == "Solved") {
+                                return "<label class='label label-success'>Solved</label>";
+                            } else if (row[6] == "Unapproved") {
+                                return "<label class='label label-danger'>Unapproved</label>";
+                            } else if (row[6] == "Cancelled") {
+                                return "<label class='label label-default'>Cancelled</label>";
+                            } else if (row[6] == "Closed") {
+                                return "<label class='label label-default'>Closed</label>";
+                            }
                         },
                         // Status
                         "targets": 6,
