--- a/TMS/TMS/Views/Shared/TMSRequesterLayout.cshtml
+++ b/TMS/TMS/Views/Shared/TMSRequesterLayout.cshtml
@@ -87,7 +87,7 @@
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header">
-                                    <img src="@ViewBag.LayoutAvatarURL" class="img-circle" alt="User Image" style="height: 45px;">
+                                    <img src="@ViewBag.LayoutAvatarURL" class="img-circle" alt="User Image">
                                     <p>@ViewBag.LayoutName</p>
                                 </li>
                                 <!-- Menu Footer-->
