fix solution attachment "x" button

--- a/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/New.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/New.cshtml
@@ -160,11 +160,11 @@
                                 <ul>
                                     <li>
                                         <a class="anchorcss">
+                                            <span><i class="fa fa-arrows draggable" style="color: #aaa;"></i></span>
                                             <span name="CriteriaId" data-role="ddl-criteria"></span>
                                             <span name="ConditionId" data-role="ddl-criteria"></span>
                                             <span class="add-criteria" onclick="generateNewNode()"><i class="fa fa-plus" style="color: #aaa;"></i></span>
                                             <span class="add-criteria" onclick="removeNode()"><i class="fa fa-minus" style="color: #aaa;"></i></span>
-
                                         </a>
                                     </li>
                                 </ul>
