--- a/TMS/TMS/Areas/HelpDesk/Views/Report/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Report/Index.cshtml
@@ -70,7 +70,7 @@
                     <!--Button Generate Report-->
                     <div class="form-group">
                         <div class="col-sm-offset-4">
-                            <button onclick="exportReport()" class="btn btn-primary btn-flat">Export Report</button>
+                            <button onclick="exportReport()" id="export-report-btn" class="btn btn-primary btn-flat">Export Report</button>
                         </div>
                     </div>
                 </div>
@@ -113,13 +113,31 @@
         <!-- /.box -->
     </div>
 </div>
-<div class="modal" id="loading-modal">
-    <img src="~/Content/img/ajax-loader.gif" />
+
+<div class="modal fade bs-example-modal-sm" id="loading-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Exporting Report</h4>
+            </div>
+            <div class="modal-body alignCenter">
+                <p>We're exporting your report. Please wait...</p>
+                <img src="~/Content/img/ajax-loader.gif" />
+            </div>
+        </div>
+    </div>
 </div>
+
+<form class="hidden" id="export-report-form" action="/HelpDesk/Report/Export" method="POST">
+    <input type="hidden" name="GraphImage" id="graph-txt"/>
+    <input type="hidden" name="DataImage" id="data-txt"/>
+</form>
 
 @section Scripts {
     @Scripts.Render("~/bundles/chart")
     <script src="~/Content/js/html2canvas.js"></script>
+    <script src="~/Content/Plugins/jquerydownload/jquery.fileDownload.js"></script>
     <script>
         var defaultColors = [
             "#FF6384", "#36A2EB", "#FFCE56", "#f0f8ff", "#a4c639", "#8db600", "#ff9966", "#007fff", "#fae7b5",
@@ -407,6 +425,7 @@
         });
 
         var exportReport = function () {
+            $("#export-report-btn").prop("disabled", true);
             var graph_condition_div = document.getElementById("graph-condition-div");
             var data_div = document.getElementById("data-div");
             $("#loading-modal").modal('show');
@@ -414,27 +433,18 @@
                 onrendered: function (graph_condition_canvas) {
                     html2canvas(data_div, {
                         onrendered: function (data_canvas) {
-                            var graph_condition_img = new Image;
 
-                            graph_condition_img.id = 'graph-condition-img';    /// give an id so we can remove it in next step
-                            graph_condition_img.src = graph_condition_canvas.toDataURL("image/png");
-                            graph_condition_img.className = 'canvas-image'
-
-                            var data_img = new Image;
-
-                            data_img.id = 'data-img';    /// give an id so we can remove it in next step
-                            data_img.src = data_canvas.toDataURL("image/png");
-                            data_img.className = 'canvas-image'
-
-                            var hide = $('<style>').html('body *:not(.canvas-image) { display: none !important; }').appendTo(document.head);
-                            document.body.appendChild(graph_condition_img);
-                            document.body.appendChild(data_img);
-
-                            window.print();
-                            $('#graph-condition-img').remove();
-                            $('#data-img').remove();
-                            $("#loading-modal").modal('hide');
-                            hide.remove();
+                            $("#graph-txt").val(graph_condition_canvas.toDataURL("image/png"));
+                            $("#data-txt").val(data_canvas.toDataURL("image/png"));
+                            $.fileDownload($("#export-report-form").attr('action'), {
+                                successCallback: function (url) {
+                                    $("#loading-modal").modal('hide');
+                                },
+                                failMessageHtml: "There was a problem generating your report, please try again.",
+                                httpMethod: "POST",
+                                data: $("#export-report-form").serialize()
+                            });
+                            $("#export-report-btn").prop("disabled", false);
                         }
                     });
                 }
