--- a/TMS/TMS/Views/KnowledgeBase/Index.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Index.cshtml
@@ -261,7 +261,7 @@
         $(document).ready(function () {
             notifyFlashMessage();
             showTreeViewModal();
-            getAllSolution();
+            getSolutionsByCategory();
             initSimilarTicketFrequencyTable();
             $(".menu-item").click(function () {
 
@@ -352,60 +352,7 @@
             });
         };
 
-        function getAllSolution() {
-            $.ajax({
-                url: "/KnowledgeBase/GetSolutions/",
-                type: "GET",
-                data: {
-                    key_search: $("#key_search").val()
-                },
-                success: function (data) {
-                    $(".question-list").empty();
-                    if (data.data.length == 0) {
-                        $(".question-list").append("<div class='col-sm-12' style='text-align:center'><p>There is no solution to display. </p></div>");
-                    } else {
-                        for (i = 0; i < data.data.length; i++) {
-                            var content = data.data[i].Content;
-                            content = $.truncate(content, {
-                                length: 350,
-                            });
-                            var sId = data.data[i].ID;
-                            var keywordTags = (data.data[i].Keyword).split(',');
-                            $(".question-list").append(
-                             '<div class="question-row"><div class="question-header col-lg-10"><input type="checkbox" data-role="cbox-solution" data-id="' + sId + '/>'
-                             + '&nbsp;&nbsp;<a class="question-title" href="javascrip:void{0}"> ' + data.data[i].Subject + '</a>'
-                             + '</div><div class="col-lg-2 button"><a class="btn-sm btn-success" href="/FAQ/Detail?Path=' + data.data[i].Path + '"><i class="fa fa-eye"></i></a>'
-                             + '&nbsp;&nbsp;<a class="btn-sm btn-primary" href="/KnowledgeBase/Edit/' + sId + '"><i class="fa fa-pencil"></i></a></div>'
-                             + '<div class="question-detail col-sm-12">'
-                             + '<p><i class="fa fa-calendar"></i>&nbsp;Created time: ' + formatDateTime(new Date(parseInt(data.data[i].CreatedTime.substr(6)))) + '</p>'
-                             + content + '<a href="/FAQ/Detail?Path=' + data.data[i].Path + '">...Continue Reading</a>'
-                             + '<p><ul class="keywords" id="keyword' + sId + '"></ul></p></div></div>');
-                            $("#keyword" + sId).empty();
-                            if (data.data[i].Keyword != "-") {
-                                $("#keyword" + sId).append("<li style='padding: 5px 0px'>Keywords: </li>");
-                                for (j = 0; j < keywordTags.length; j++) {
-                                    var key = keywordTags[j].replace(/"/g, '');
-                                    $("#keyword" + sId).append("<li><div class='key-tags'><span>" + key + "<span><div></li>");
-                                }
-                            } else {
-                                $("#keyword" + sId).append("<li>Keywords: -</li>");
-                            }
-                            $(".question-list").find('img').hide();
-                        }
-                    }
-                },
-                error: function (data) {
-                    noty({
-                        text: "Cannot connect to server! Please try again later!",
-                        type: "error",
-                        layout: "topRight",
-                        timeout: 2500
-                    });
-                }
-            });
-        }
-
-        function getSolutionsByActiveNode(id) {
+        function getSolutionsByCategory(id) {
             $.ajax({
                 url: "/KnowledgeBase/GetSolutionsByCategory/",
                 type: "GET",
@@ -426,7 +373,7 @@
                             var sId = data.data[i].ID;
                             var keywordTags = (data.data[i].Keyword).split(',');
                             $(".question-list").append(
-                             '<div class="question-row"><div class="question-header col-lg-10"><input type="checkbox" data-role="cbox-solution" data-id="' + sId + '/>'
+                             '<div class="question-row"><div class="question-header col-lg-10"><input type="checkbox" data-role="cbox-solution" data-id="' + sId + '"/>'
                              + '&nbsp;&nbsp;<a class="question-title" href="javascrip:void{0}"> ' + data.data[i].Subject + '</a>'
                              + '</div><div class="col-lg-2 button"><a class="btn-sm btn-success" href="/FAQ/Detail?Path=' + data.data[i].Path + '"><i class="fa fa-eye"></i></a>'
                              + '&nbsp;&nbsp;<a class="btn-sm btn-primary" href="/KnowledgeBase/Edit/' + sId + '"><i class="fa fa-pencil"></i></a></div>'
@@ -533,15 +480,15 @@
 
         $("#key_search").on("keyup", function () {
             if ($("#category-treeview-div .category-node").hasClass("jstree-clicked")) {
-                getSolutionsByActiveNode($(".jstree-clicked").attr("data-id"));
+                getSolutionsByCategory($(".jstree-clicked").attr("data-id"));
             }
             else {
-                getAllSolution();
+                getSolutionsByCategory();
             }
         });
 
         $("#category-treeview-div").on("click", ".category-node", function () {
-            getSolutionsByActiveNode($(this).attr("data-id"));
+            getSolutionsByCategory($(this).attr("data-id"));
         });
 
         $("#category-treeview-div").on("after_open.jstree", function () {
