--- a/TMS/TMS/Views/KnowledgeBase/Edit.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Edit.cshtml
@@ -1,8 +1,18 @@
 ﻿@using TMS.Models
+@using TMS.Utils
 @model TMS.ViewModels.KnowledgeBaseViewModel
 @{
-    Layout = "~/Areas/Technician/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Edit knowledge Base";
+}
+@{
+    if (ViewBag.LayoutRole == ConstantUtil.UserRoleString.HelpDesk)
+    {
+        Layout = "~/Areas/HelpDesk/Views/Shared/_Layout.cshtml";
+    }
+    else if (ViewBag.LayoutRole == ConstantUtil.UserRoleString.Technician)
+    {
+        Layout = "~/Areas/Technician/Views/Shared/_Layout.cshtml";
+    }
 }
 <link rel="stylesheet" href="~/Content/Plugins/tagit/jquery.tagit.css" />
 
