--- a/TMS/TMS/Views/KnowledgeBase/Create.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Create.cshtml
@@ -27,13 +27,14 @@
     input, textarea, select, .select2 {
         max-width: 674px !important;
     }
+
     .select2 {
-        width: 674px !important;}
+        width: 674px !important;
+    }
 
     .required {
         color: #ff0000;
     }
-
 </style>
 
 <div class="row">
@@ -62,9 +63,10 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label col-md-2">Keyword</label>
+                    <label class="control-label col-md-2">Keywords</label>
                     <div class="col-md-10" style="max-width: 704px;">
                         @Html.TextBoxFor(m => m.Keyword, new { @class = "form-control", id = "keyword" })
+                        <a href="javascript:generateKeywords()">Generate keywords</a>
                         @Html.ValidationMessageFor(m => m.Keyword, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -95,6 +97,7 @@
 </div>
 @section scripts{
     <script src="~/Content/Plugins/tagit/tag-it.min.js"></script>
+    <script src="~/Content/custom-js/knowledgebase.js"></script>
     <script>
         $(document)
             .ready(function () {
@@ -115,20 +118,9 @@
                 }
             });
 
-        $("#subject-txt")
-            .keyup(function () {
-                getPath();
-            });
+        $("#subject-txt").keyup(function () {
+            getPath();
+        });
 
-        var getPath = function () {
-            $("#path")
-                    .val($("#subject-txt")
-                        .val()
-                        .trim()
-                        .toLowerCase()
-                        .replace(/\s/g, '-')
-                        .replace(/\-{2,}/g, '-')
-                        .replace(/[^\w-]+/g, ''));
-        }
     </script>
 }
