--- a/TMS/TMS/Views/KnowledgeBase/Edit.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Edit.cshtml
@@ -68,11 +68,11 @@
                         }
                     </div>
                 </div>
-
                 <div class="form-group">
-                    <label class="control-label col-md-2">Keyword</label>
+                    <label class="control-label col-md-2">Keywords</label>
                     <div class="col-md-10" style="max-width: 704px;">
                         @Html.TextBoxFor(m => m.Keyword, new { @class = "form-control", id = "keyword" })
+                        <a href="javascript:generateKeywords()">Generate keywords</a>
                         @Html.ValidationMessageFor(m => m.Keyword, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -97,8 +97,6 @@
                         <a class="btn btn-default btn-flat" href="@(Url.Action("Index", "KnowledgeBase"))">Cancel</a>
                     </div>
                 </div>
-
-
             }
         </div>
     </div>
@@ -106,6 +104,7 @@
 
 @section scripts{
     <script src="~/Content/Plugins/tagit/tag-it.min.js"></script>
+    <script src="~/Content/custom-js/knowledgebase.js"></script>
     <script>
         $(document)
             .ready(function() {
@@ -135,16 +134,5 @@
             .keyup(function() {
                 getPath();
             });
-
-        var getPath = function () {
-            $("#path")
-                    .val($("#subject-txt")
-                        .val()
-                        .trim()
-                        .toLowerCase()
-                        .replace(/\s/g, '-')
-                        .replace(/\-{2,}/g, '-')
-                        .replace(/[^\w-]+/g, ''));
-        }
     </script>
 }
